--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:background="@color/colorPrimary"
         app:titleTextColor="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
+        android:layout_height="?attr/actionBarSize"
+        app:theme="@style/ThemeToolbar">
 
     </android.support.v7.widget.Toolbar>
 
