--- a/app/src/main/res/layout/activity_package.xml
+++ b/app/src/main/res/layout/activity_package.xml
@@ -18,14 +18,6 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <Button
-        android:id="@+id/btn_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:padding="10dp"
-        android:text="保存"/>
-
     <EditText
         android:id="@+id/tv_package"
         android:layout_width="match_parent"
@@ -33,6 +25,17 @@
         android:layout_weight="1"
         android:gravity="top"
         android:padding="10dp"
-        android:hint="显示区"/>
+        android:background="@drawable/border"/>
+
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:padding="10dp"
+        android:text="@string/btn_save"
+        android:textSize="18dp"
+        android:background="@color/colorAccent"
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
