--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,6 +7,7 @@
     <item android:id="@+id/action_modify"
         android:title="@string/action_modify"
         android:orderInCategory="80"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:icon="@android:drawable/btn_star"/>
 
 </menu>
